# tsb-service-rust

./: .env.example  Cargo.toml  Dockerfile  README.md
.github/workflows/: action.yml
migrations/2024-05-09-203647_create_users/: down.sql  up.sql
migrations/2024-05-09-204842_create_product_categories/: down.sql  up.sql
migrations/2024-05-09-205317_create_product_category_translations/: down.sql  up.sql
migrations/2024-05-09-211605_create_products/: down.sql  up.sql
migrations/2024-05-09-211611_create_product_translations/: down.sql  up.sql
migrations/2024-05-09-212836_create_orders/: down.sql  up.sql
migrations/2024-05-09-213034_create_attachments/: down.sql  up.sql
migrations/2024-05-09-213113_create_order_product/: down.sql  up.sql
migrations/2024-05-09-213242_create_product_product_category/: down.sql  up.sql
src/: main.rs  redis_client.rs  schema.rs
src/controllers/: mod.rs  order_controller.rs  product_controller.rs  user_controller.rs
src/middlewares/: mod.rs  token_validation.rs
src/models/: mod.rs  order.rs  product.rs  user.rs
src/routes/: head_routes.rs  mod.rs  order_routes.rs  product_routes.rs  user_routes.rs
