[package]
name = "tsb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accept-language = "3.1.0"
actix-cors = "0.7.0"
actix-web = "4.5.1"
argon2 = "0.5.3"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15.0"
dotenvy = "0.15"
env_logger = "0.11.3"
jsonwebtoken = "9.3.0"
postgres = "0.19.7"
r2d2 = "0.8.10"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
